Fix commands en definition Tidy up code erasing old macros Change some \def to \DeclareMath... Change \hacer Correct extra-4-7 (creo).

--- a/1-guia/ejercicios-1/ej-28-1.tex
+++ b/1-guia/ejercicios-1/ej-28-1.tex
@@ -54,10 +54,10 @@ $\llave{l}{
 	}
 $
 \begin{itemize}
-	\item Dada $f:A\,(dominio) \to B\,(codominio)$ el conjunto \textit{imagen} es: $\imagen(f)= \set{y \en B : \existe x \en A \talque f(x) = y}$
+	\item Dada $f:A\,(dominio) \to B\,(codominio)$ el conjunto \textit{imagen} es: $\im(f)= \set{y \en B : \existe x \en A \talque f(x) = y}$
 	\item \begin{itemize}
 		      \item \textit{inyectiva:} si $\forall x, x' \en A \text{ tales que } f(x) = f(x')$ se tiene que $ x = x'$
-		      \item \textit{sobreyectiva:} si $\forall y \en B, \existe x \en A \text{ tal que } f(x) = y.\: f\text{ es sobreyectiva si } \imagen(f) = B$
+		      \item \textit{sobreyectiva:} si $\forall y \en B, \existe x \en A \text{ tal que } f(x) = y.\: f\text{ es sobreyectiva si } \im(f) = B$
 		      \item \textit{biyectiva:} Cuando es inyectiva y sobreyectiva.
 	      \end{itemize}
 	\item $A, B, C$ conjuntos y $f: A \to B \to C,\, g: B \to C$ funciones. Entonces la \textit{composición} de $f$ con $g$, que se nota:\\
