--- a/1-guia/ejercicios-1/ej-30-1.tex
+++ b/1-guia/ejercicios-1/ej-30-1.tex
@@ -3,7 +3,7 @@ Determinar si las siguientes funciones son inyectivas, sobreyectivas o biyectiva
 \begin{enumerate}[label=\roman*)]
 	\item $f: \reales \to \reales,\quad f(x) = 12 x^2 - 5$\\
 	      No es \textit{inyectiva}, $f(-1) = f(1)$.\\
-	      No es \textit{sobreyectiva}, $\imagen(f) = [-5, +\infinito)$.
+	      No es \textit{sobreyectiva}, $\im(f) = [-5, +\infinito)$.
 	\item \hacer
 
 	\item \hacer
