--- a/1-guia/ejercicios-1/ej-5-1.tex
+++ b/1-guia/ejercicios-1/ej-5-1.tex
@@ -7,8 +7,8 @@ $
 	\end{cases}
 $
 \begin{enumerate}[label=\roman*)]
-	\item $\quad (A \union B \union C)^c \stacktext{(c)}{=} (A \union B)^c \inter C^c \stacktext{(c)}{=} A^c \inter B^c \inter C^c$
-	\item $\quad (A \inter B \inter C)^c \stacktext{(d)}{=} (A \inter B)^c \union C^c \stacktext{(d)}{=} A^c \union B^c \union C^c$
+	\item $\quad (A \union B \union C)^c \igual{(c)} (A \union B)^c \inter C^c \igual{(c)} A^c \inter B^c \inter C^c$
+	\item $\quad (A \inter B \inter C)^c \igual{(d)} (A \inter B)^c \union C^c \igual{(d)} A^c \union B^c \union C^c$
 \end{enumerate}
 \red{Solo eso? Falta demostrar algo de alguna manera más rigurosa?}\\
 \blue{No, con eso sería suficiente \Tilde}
