--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -6,7 +6,7 @@
 			      \llave{ l }{
 				      n = k \to \sumatoria{1}{k} (-1)^{i+1} i^2 = (-1)^{k+1} \frac{k(k+1)}{2} \\
 				      \entonces\\
-				      n = k+1 \to \sumatoria{1}{k+1}  (-1)^{i+1} i^2 \eq?= (-1)^{(k+1)+1} \frac{(k+1)(k+2)}{2}\\
+                      n = k+1 \to \sumatoria{1}{k+1}  (-1)^{i+1} i^2 \igual{?} (-1)^{(k+1)+1} \frac{(k+1)(k+2)}{2}\\
 				      \to \sumatoria{1}{k+1}  (-1)^{i+1} i^2 =
 				      \HI{
 					      \sumatoria{1}{k} (-1)^{i+1} i^2
@@ -38,7 +38,7 @@
 		      \text{Paso inductivo } n = k \to
 		      \productoria{i=1}{k} ( 1 + a^{2^{i-1}} ) =
 		      \frac{1-a^{2^k}}{1-a} \entonces
-		      n = k+1 \to  \productoria{i=1}{k+1} ( 1 + a^{2^{i-1}} ) \eq?=
+                n = k+1 \to  \productoria{i=1}{k+1} ( 1 + a^{2^{i-1}} ) \igual{?}
 		      \frac{1 - a^{2^{k+1}}}{1-a}\\
 		      \llave{l}{
 		      \productoria{i=1}{k+1} ( 1 + a^{2^{i-1}} ) =
