--- a/2-guia/ejercicios-2/ej-9-2.tex
+++ b/2-guia/ejercicios-2/ej-9-2.tex
@@ -37,7 +37,7 @@
 		            Desarrollo la TI:
 		            \begin{align*}
 			            P(n+1): & \sumatoria{i=1}{n+1} (a_{i+1} - a_i) =
-			            a_{n+2} - a_{n+1} + \suma1n(a_{i+1} - a_i) \stacktext{HI}= a_{n+2} - a_{n+1} + a_{n+1} - a_1 \\
+                            a_{n+2} - a_{n+1} + \suma1n(a_{i+1} - a_i) \igual{HI} a_{n+2} - a_{n+1} + a_{n+1} - a_1 \\
 			            P(n+1): & \sumatoria{i=1}{n+1}(a_{i+1} - a_i) = a_{n+2} - a_1                                \\
 			            P(n+1): & \ V
 		            \end{align*}
