--- a/3-guia/ejercicios-3/ej-10-3.tex
+++ b/3-guia/ejercicios-3/ej-10-3.tex
@@ -1,16 +1,17 @@
 \ejercicio
+
 Sean $A = \set{1,2,3,4,5}$ y $B = \set{1,2,3,4,5,6,7,8,9,10,11,12}$. Sea $\mathcal F$ el conjunto de todas las funciones
 $f: A \to B$.
 \begin{enumerate}[label=\roman*)]
 	\item  ¿Cuántos elementos tiene le conjunto $\mathcal F$
-	\item  ¿Cuántos elementos tiene le conjunto $\set{f \en \mathcal F : 10 \en \imagen(f) }$
-	\item  ¿Cuántos elementos tiene le conjunto $\set{f \en \mathcal F : 10 \en \imagen(f)}$
+	\item  ¿Cuántos elementos tiene le conjunto $\set{f \en \mathcal F : 10 \en \im(f) }$
+	\item  ¿Cuántos elementos tiene le conjunto $\set{f \en \mathcal F : 10 \en \im(fa)}$
 	\item  ¿Cuántos elementos tiene le conjunto $\set{f \en \mathcal F : f(1) \en \set{2,4,6} }$
 \end{enumerate}
 
 \separadorCorto
 
-Cuando se calcula la cantidad de funciones, haciendo el árbol se puede ver que va a haber $\#\imagen(f)$ de funciones que provienen
+Cuando se calcula la cantidad de funciones, haciendo el árbol se puede ver que va a haber $\#\im(f)$ de funciones que provienen
 de un elemento del dominio. Por lo tanto si tengo un conjunto $A_n$ y uno $B_m$, la cantidad de funciones $f : A \to B$ será
 de $m^n$\\
 
