--- a/3-guia/ejercicios-3/ej-11-3.tex
+++ b/3-guia/ejercicios-3/ej-11-3.tex
@@ -8,7 +8,7 @@ Sean $A = \set{1,2,3,4,5,6,7}$ y $\set{8,9,10,11,12,13,14}$.
 \separadorCorto
 
 Cuando cuento funciones biyectivas, el ejercicio es como reordenar los elementos del conjunto de llegada de todas las
-formas posibles. Dado un conjunto Im($f$), la cantidad de funciones biyectivas será $\#\imagen(f)$
+formas posibles. Dado un conjunto $\im(f)$, la cantidad de funciones biyectivas será $\#\im(f)$
 
 \begin{enumerate}[label=\roman*)]
 	\item Hay $7!$ funciones biyectivas.
