--- a/4-guia/ejercicios-4/ej-7-4.tex
+++ b/4-guia/ejercicios-4/ej-7-4.tex
@@ -8,7 +8,7 @@
 
 \separadorCorto
 \begin{enumerate}[label=\roman*)]
-	\item $99 \divideA 10^{2n} + 197 \stackrel{def}{\sisolosi}
+	\item $99 \divideA 10^{2n} + 197 \Sii{def}
 		      \congruencia{10^{2n} + 197}{0}{99} \to
 		      \congruencia{10^{2n} + 198}{1}{99} \to
 		      \congruencia{10^{2n} + \ub{198}{\conga{99} 0}}{1}{99} \to \congruencia{100^n}{1}{99}\to \\
@@ -23,7 +23,7 @@
 
 	\item
 	      $9 \divideA 7 \cdot 5^{2n} + 2^{4n+1}
-		      \stackrel{def}{\sisolosi}
+		      \Sii{def}
 		      \congruencia{7\cdot5^{2n} + 2^{4n+1}}{0}{9}
 		      \flecha{sumo $2\cdot 5^{2n}$}[M.A.M]
 		      \congruencia{\ub{9 \cdot 5^{2n}}{\conga9 0} + 2\cdot 2^{4n}}{2 \cdot 5^{2n}}{9}\\
