--- a/5-guia/ejercicios-5-extra/ej-extra-1-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-1-5.tex
@@ -88,5 +88,7 @@ $\llaves{c}{
 		o \\
 		a = 105k_2 + 92
 	}\flecha{calculo}[$\conga{70}$]$
-$\congruencia{a}{22}{35} \flecha{quiero los restos}[pedidos del enunciado] r_{70}(a) = \set{22, 57}$,
-valores de $a$ que cumplan condición de $r_{70}(a)$
+$\congruencia{a}{22}{35}\\
+\flecha{quiero los restos}[pedidos del enunciado]
+r_{70}(a) = \set{22, 57}$, 
+valores de $a$ que cumplan condición de $r_{70}(a)$ \Tilde
