--- a/5-guia/ejercicios-5/ej-3-5.tex
+++ b/5-guia/ejercicios-5/ej-3-5.tex
@@ -7,7 +7,7 @@ producto $B$ cuesta 48 pesos, ¿cuántas unidades de cada producto se pueden com
 
 $
 	\llave{l}{
-		A \geq 0 \y B \geq 0 \text{. Dado que son productos.}\\
+            A \geq 0 \y B \geq 0 \text{. Dado que son productos \faIcon{brain}.}\\
 		(A:B) = 3 \entonces 39A + 28B = 135
 		\flecha{coprimizar}
 		13A + 16B = 45\\
