--- a/7-guia/ejercicios-7/ej-10-7.tex
+++ b/7-guia/ejercicios-7/ej-10-7.tex
@@ -8,7 +8,7 @@ Sea $f \en \racionales[X]$ tal que $f(1) =  -2, f(2) = 1 \ytext f(-1) = 0.$ Hall
 \textit{Sea $P \en \K[X] \entonces $ el resto de dividir a $P$ por $X - a$ es $P(a)$}.\\
 
 $f(X) = q(X)\cdot \ub{X^3 - 2X^2 -X + 2}{g(X)}  + r(X)$, con $g(X) = (X-2) \cdot (X-1)\cdot(X+1) \ytext
-	r(X) = a^2 + bX + c,$ ya que el $\gr{r} < \gr{g}$
+	r(X) = a^2 + bX + c,$ ya que el $\gr(r) < \gr(g)$
 $\flecha{evaluar}
 	\llave{l}{
 		f(1) = -2 = q(1) \cdot \cancelto{0}{g(1)} + r(1) = -2\\
