--- a/7-guia/ejercicios-7/ej-11-7.tex
+++ b/7-guia/ejercicios-7/ej-11-7.tex
@@ -8,7 +8,7 @@ por $X^3 - X$ en $\racionales[X]$.
 $\llave{l}{
 		f(X) = X^{2n} + 3X^{n+1} + 3X^n - 5X^2 +2X + 1 \\
 		g(X) = X \cdot (X-1) \cdot (X+1)
-      } \entonces f = q(X) \cdot g(X) + r(X)$ con $\gr{\ub{aX^2 + bX + c}{r(X)}} \leq 2$
+      } \entonces f = q(X) \cdot g(X) + r(X)$ con $\gr(\ub{aX^2 + bX + c}{r(X)} ) \leq 2$
 
 $\llave{l}{
 		f(0) = q(0) \cdot \ub{g(0)}{=0} + r(0) = 1\\
