--- a/7-guia/ejercicios-7/ej-4-7.tex
+++ b/7-guia/ejercicios-7/ej-4-7.tex
@@ -16,11 +16,11 @@ Hallar el cociente y el resto de la división de $f$ por $g$ en los casos
 \separadorCorto
 
 \begin{enumerate}[label=\roman*)]
-	\item \polylongdiv[style=D]{5X^4 + 2X^3 - X + 4}{X^2 + 2} \\
+	\item \divPol{5X^4 + 2X^3 - X + 4}{X^2 + 2} \\
 
 	      Resultado válido para $\racionales[X],\,\reales[X],\,\complejos[X]$
 
-	\item \polylongdiv[style=D]{4X^4 + X^3 - 4}{2X^2 + 1} \\
+	\item \divPol{4X^4 + X^3 - 4}{2X^2 + 1} \\
 
 	      Resultado válido para $\racionales[X],\,\reales[X],\,\complejos[X]$\\
 	      En $\enteros/p\enteros\
