--- a/7-guia/ejercicios-7/ej-6-7.tex
+++ b/7-guia/ejercicios-7/ej-6-7.tex
@@ -11,7 +11,7 @@ se dice que $f$ es congruente a $g$ módulo $h$ si $h \divideA f-g$. En tal caso
 
 	\item Probar que si $\congruencia{f}{g}{h}$ entonces $\congruencia{f^n}{g^n}{h}$ para todo $n \en \naturales$.
 
-	\item Probar que $r$ es el resto de la división de $f$ por $h$ si y solo si $\congruencia{f}{r}{h}$ y $r=0$ o $\gr{r} < \gr{h}$.
+	\item Probar que $r$ es el resto de la división de $f$ por $h$ si y solo si $\congruencia{f}{r}{h}$ y $r=0$ o $\gr(r) < \gr(h)$.
 \end{enumerate}
 
 \separadorCorto
