--- a/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
@@ -43,17 +43,25 @@ Hago tabla de restos 9 y 3, para ver si las expresiones $(a^2 + 2 : 2a+1)$ son d
 		% r_9(2a + 1)  & 1 & 3 & 5 & 7 & \magenta{0} & 2 & 4 & 6 & 8 \\ \hline
 	\end{array} \to$ \magenta{$\congruencia{a}{4}{9}$}, valores de $a$ candidatos para obtener MCD.\\
 
-\noindent$\begin{array}{|c|c|c|c|}
+\noindent
+$\begin{array}{|c|c|c|c|}
 		\hline
 		r_3(a)      & 0 & \magenta{1} & 2 \\ \hline\hline
 		r_3(-a + 4) & 2 & \magenta{0} & 2 \\ \hline
 		% r_3(a^2 + 2) & 2 & \magenta{0} & 0 \\ \hline
 		% r_3(2a + 1)  & 1 & \magenta{0} & 5 \\ \hline
 	\end{array} \to$ \magenta{$\congruencia{a}{1}{3}$},  valores de $a$ candidatos para obtener MCD .\\
-La condición $\congruencia{a}{7}{9}$ no es compatible con el resultado de la tabla de $r_9$, pero sí con $r_3$. Notar que
+
+La condición $\congruencia{a}{7}{9}$ no es compatible con el resultado de la tabla de $r_9$,
+pero sí con $r_3$. Notar que
+
 $a = 9k + 7 \conga3 1 $. \\
-El MCD \boxed{(a^3 + 4a + 1 : a^2 + 2) =
+
+El MCD 
+\boxed{
+        (a^3 + 4a + 1 : a^2 + 2) =
 	\llave{lcr}{
 		3 & \text{si} & \congruencia{a}{7}{9}\\
-		1 & \text{si} &  a \not\equiv 7\ (9)
-	}} \Tilde
+        1 & \text{si} & \noCongruencia{a}{7}{9}
+	}\Tilde
+    } 
