--- a/4-guia/ejercicios-4-extra/ej-extra-8-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-8-4.tex
@@ -6,50 +6,58 @@ $\llave{l}{
 		a_1 = 3\\
 		a_n = a_{n-1} - a_{n-2}\ \paratodo n \geq 2
 	}$
+
+\begin{multicols}{2}
+	\begin{enumerate}[label=\alph*)]
+		\item Probar que $a_{n+6} = a_n$
+
+		\item Calcular $\sumatoria{k=0}{255} a_k$
+	\end{enumerate}
+\end{multicols}
+
+\separadorCorto
+
 \begin{enumerate}[label=(\alph*)]
-	\item Probar que $a_{n+6} = a_n$\\
-
-      \separadorCorto
-
-      Por inducción: \boxed{p(n):   a_{n+6} = a_n \paratodo n \geq \naturales_0 \text{ Verdadero?}}\\
+	\item
+	      Por inducción: \boxed{p(n):   a_{n+6} = a_n \paratodo n \geq \naturales_0 \text{ Verdadero?}}\\
 	      $\llave{l}{
 		      \textit{ Caso Base:} \text{ Primero notar que,} \\
 		      \to
 		      \llaves{l}{
 			      a_0 = 1\\
 			      a_1 = 3\\
-			      a_2 \eqDef= 2\\
-			      a_3 \eqDef= -1\\
-			      a_4 \eqDef= -3\\
-			      a_5 \eqDef= -2
+			      a_2 \igual{def}  2\\
+			      a_3 \igual{def}  -1\\
+			      a_4 \igual{def}  -3\\
+			      a_5 \igual{def}  -2
 		      } \to
 		      \llaves{l}{
-			      a_6 \eqDef= 1\\
-			      a_7 \eqDef= 3\\
-			      a_8 \eqDef= 2\\
-			      a_9 \eqDef= -1\\
-			      a_{10} \eqDef= -3\\
-			      a_{11} \eqDef= -2
+			      a_6 \igual{def}  1\\
+			      a_7 \igual{def}  3\\
+			      a_8 \igual{def}  2\\
+			      a_9 \igual{def}  -1\\
+			      a_{10} \igual{def}  -3\\
+			      a_{11} \igual{def}  -2
 		      } \to
 		      \cdots \text{ Se ve que tiene un período de 6 elementos.}\\
 
-		      p(n=2) \text{ Verdadero? }? \to a_8 \eq?= a_2 \Tilde\\
+		      p(n=2) \text{ Verdadero? }? \to a_8 \igual{?} a_2 \Tilde\\
 
 		      \textit{Paso inductivo: } \text{Supongo } p(k) \text{ Verdadero? } \entonces p(k+1) \text{ Verdadero? }?\\
 		      \textit{Hipótesis inductiva: }
 		      \text{Supongo } a_{k+6} = a_k \paratodo k \in \naturales_0 \text{ Verdadero? } ,\, \qvq a_{k+7} = a_{k+1}\\
-		      \red{a_{k+7}} \eqDef=
-		      a_{k+6} - a_{k+5} \stacktext{HI}{=}
-		      a_k - a_{k+5} \eqDef=
+		      \red{a_{k+7}} \igual{def}
+		      a_{k+6} - a_{k+5} \igual{HI}
+		      a_k - a_{k+5} \igual{def}
 		      a_k - (\ub{ a_k + a_{k+4}}{a_{k+5}}) = -a_{k+4}\\
-		      \to \red{a_{k+7}} = -a_{k+4} \eqDef=
-		      -(a_{k+3} - a_{k+2}) \eqDef =
+		      \to \red{a_{k+7}} = -a_{k+4} \igual{def}
+		      -(a_{k+3} - a_{k+2}) \igual{def}
 		      - ( a_{k+2} - \red{a_{k+1}} - a_{k+2} ) = \red{a_{k+1}} \Tilde
 		      }\\
 	      $\\
 	      Como $p(0) \y p(1) \y \cdots p(5)$ son verdaderas y $p(k)$ es verdadera así como $p(k+1)$ también lo es, por el principio de inducción $p(n)$ es verdadera $\paratodo n \in \naturales_0$
 
-	\item Calcular $\sumatoria{k=0}{255} a_k$ \\
+	\item
 	      $\sumatoria{k=0}{255} a_k =
 		      \underbrace{\textstyle a_0 + a_1 + a_2 + a_3 + a_4 + a_5}_{= 0} +
 		      \underbrace{\textstyle a_6 + a_7 + a_8 + a_9 + a_{10} + a_{11} }_{=0} +
