--- a/7-guia/teoria-7/teoria-7.tex
+++ b/7-guia/teoria-7/teoria-7.tex
@@ -1,6 +1,5 @@
 % Macro Local
 \newcommand{\polGen}[1]{\sumatoria{i=0}{n} #1_i X^i}
-\newcommand{\mult}[1]{\text{mult}(#1)}
 
 \begin{itemize}
 	\item \textit{Operaciones: }
@@ -13,7 +12,7 @@
 	\item $(\K[X],+,\cdot) \text{ es un anillo conmutativo } \to f\cdot(g+h) = f\cdot g + f\cdot h,\, \paratodo f,\,g,\,h \en \K[X]$
 
 	\item \textit{Algoritmo de división}: $f,g \en \K[X]$ no nulos, existen únicos $q$ y $R \en \K[X]$ tal que $f = q\cdot g + R$
-      con $\gr{R} < \gr{f}$ o $R = 0$
+            con $\gr(R) < \gr(f)$ o $R = 0$
 
 	\item $\alpha$ es raíz de $f \sisolosi X - \alpha \divideA f \sisolosi f = q \cdot ( X - \alpha)$
 
@@ -37,12 +36,12 @@
 		            para algún $q \en \K[X]$ tal que $q(\alpha) \distinto 0$.
 
 		      \item Sea $m \en \naturales_0$. Se dice que $\alpha$ es raíz de multiplicidad (exactamente)
-		            $m$ de $f$, y se nota $\mult{\alpha;f} = m \sisolosi (X - \alpha)^m \divideA f$,
+		            $m$ de $f$, y se nota $\mult(\alpha;f) = m \sisolosi (X - \alpha)^m \divideA f$,
 		            pero $(x - \alpha)^{m+1} \noDivide f$.\\
 		            O equivalentemente, $f = (X - \alpha)^m q$ con $q \en \K[X]$,
 		            pero $q(\alpha) \distinto 0$
 
-		      \item Sea $f \en \K[X]$ no nulo $\mult{\alpha; f} \leq \gr{f}$:
+            \item Sea $f \en \K[X]$ no nulo $\mult(\alpha; f) \leq \gr(f)$:
 
 		      \item Sean $f$, $g \en \K[X]$ no ambos nulos, y $\alpha \en \K
 			            \entonces f(\alpha) = f(\alpha) = 0 \sii (f:g)(\alpha) = 0$
@@ -52,21 +51,21 @@
 	      es raíz de $(f:f'),\, X - \alpha \divideA (f:f')$
 	      \begin{itemize}
 		      \item $
-			            \mult{\alpha,f} = m
+			            \mult(\alpha,f) = m
 			            \sisolosi
-			            f(\alpha) = 0$ y $\mult{\alpha;f'} = m-1$
+			            f(\alpha) = 0$ y $\mult(\alpha;f') = m-1$
 
-		      \item $\mult{\alpha;f} = m \sisolosi
+		      \item $\mult(\alpha;f) = m \sisolosi
 			            \llave{rl}{
-				            \mult{\alpha;f}\geq m     &
+				            \mult(\alpha;f)\geq m     &
 				            \llaveInv{c}{
 					            f(\alpha) = 0\\
 					            \vdots\\
                                 f^{(m-1)}(\alpha) = 0
 				            }\\
-				            \mult{\alpha;f} = m     &
+				            \mult(\alpha;f) = m     &
 				            \llaveInv{c}{
-                              f^{(m)}(\alpha) \distinto 0
+                              f^{(m)}\alpha) \distinto 0
 				            }
 			            }$
 	      \end{itemize}
