Fix compilation error

--- a/7-guia/ejercicios-7/ej-6-7.tex
+++ b/7-guia/ejercicios-7/ej-6-7.tex
@@ -6,7 +6,11 @@ se dice que $f$ es congruente a $g$ módulo $h$ si $h \divideA f-g$. En tal caso
 \begin{enumerate}[label=\roman*)]
 	\item Probar que $\congruencia{}{}{h}$ es una relación de equivalencia en $\K[X]$.
 
-	\item Probar que si $\congruencia{f_1}{g_1}{h}$ y $\congruencia{f_2}{g_2}{h}$ entonces $\congruencia{f_1 + f_2}{g_1 + g_2}{h}$ y
+	\item Probar que si
+	      $\congruencia{f_1}{g_1}{h}$ y
+	      $\congruencia{f_2}{g_2}{h}$
+	      entonces
+	      $\congruencia{f_1 + f_2}{g_1 + g_2}{h}$
 	      $\congruencia{f_1 \cdot f_2}{ g_1 \cdot g_2}{h}$.
 
 	\item Probar que si $\congruencia{f}{g}{h}$ entonces $\congruencia{f^n}{g^n}{h}$ para todo $n \en \naturales$.
@@ -97,15 +101,12 @@ se dice que $f$ es congruente a $g$ módulo $h$ si $h \divideA f-g$. En tal caso
 		      \sisolosi
 		      \congruencia{f^{k+1}}{f\cdot g^k}{h}
 		      \stackrel{\llamada2}\sisolosi
-              \congruencia{f^{k+1}}{g^{k+1}}{h} 
+		      \congruencia{f^{k+1}}{g^{k+1}}{h}
 	      $\Tilde\\
 
-          Finalmente $p(1), p(k), p(k+1)$ resultaron verdaderas y por el principio de inducción
-          $p(n)$ es verdadera $\paratodo n \en \naturales$
+	      Finalmente $p(1), p(k), p(k+1)$ resultaron verdaderas y por el principio de inducción
+	      $p(n)$ es verdadera $\paratodo n \en \naturales$
 
-        \item \hacer
-          
-
-
+	\item \hacer
 
 \end{enumerate}
