--- a/1-guia/ejercicios-1/ej-17-1.tex
+++ b/1-guia/ejercicios-1/ej-17-1.tex
@@ -48,8 +48,8 @@ con flechas de $A$ en $B$ y por medio de puntos en el producto cartesiano $A \ti
 		\item $\relacion = \set{(1,1), (1,3), (2,7), (3,2), (3,5)}\\
 			      \to 3 \relacion 2 \notin \partes(A \times B) $
 
-		\item $\relacion = \set{(1,1), (2,7), (3,7)}\hacer$
+		\item $\relacion = \set{(1,1), (2,7), (3,7)}$ \Hacer
 
-		\item $\relacion = \set{(1,3), (2,1), (3,7)}\hacer$
+		\item $\relacion = \set{(1,3), (2,1), (3,7)}$ \Hacer
 	\end{enumerate}
 \end{multicols}
