--- a/6-guia/ejercicios-6/ej-13-6.tex
+++ b/6-guia/ejercicios-6/ej-13-6.tex
@@ -33,13 +33,13 @@ $z_n =
 		}\\
 		\llave{l}{
 			z_{2k+2} = \conj{ 1 + z_{2k+1}^2 }
-			\stackrel{HI}{\sisolosi} z_{2k+2} =
+			\Sii{HI} z_{2k+2} =
 			\conj{ 1 + e^{\frac{2\pi}{3}i} } =
 			\conj{ e^{\frac{\pi}{3}i} } =
 			e^{-\frac{\pi}{3}i} \Tilde
 			\\
 			z_{2k+3} = \conj{ 1 + z_{2k+2}^2 }
-			\stackrel{HI}{\sisolosi} z_{2k+3} =
+			\Sii{HI} z_{2k+3} =
 			\conj{ 1 + e^{-\frac{2\pi}{3}i} } =
 			\conj{ e^{-\frac{\pi}{3}i} } =
 			e^{\frac{\pi}{3}i} \Tilde
@@ -47,7 +47,7 @@ $z_n =
 
 	Dado que $p(1), p(2), p(2k),p(2k+1),p(2k+2),p(2k+3)$ resultaron ser verdaderas, entonces
 	por el principio de inducción se concluye que $p(n)$ también lo es $\paratodo n \en \naturales$.\\
-	Dado que la sucesión $z_n$   tiene solo 2 imágenes, para cualquier $n\en \naturales$ y teniendo en cuenta
+	Dado que la sucesión $z_n$   tiene solo 2 imágenes, para cualquier $n \en \naturales$ y teniendo en cuenta
     que $e^{-i\frac{2\pi}{6}} = e^{i\frac{2\pi}{6}\cdot 5} \en G_6\ \paratodo n \en \naturales$
 \end{minipage}
 \begin{minipage}{0.3\textwidth}
