--- a/6-guia/ejercicios-6/ej-9-6.tex
+++ b/6-guia/ejercicios-6/ej-9-6.tex
@@ -2,8 +2,9 @@
 Hallar todos los $z \en \complejos$ tales que $3z^5 + 2|z|^5 + 32 = 0$
 
 \separadorCorto
+
 $3 z^5 + 2|z|^5 +32 = 0
-	\to
+	\sii
 	\ub{3z^5}{\en \complejos} = \ub{-2|z|^5- 32}{\en \reales}
 	\sisolosi
 	\llaves{l}{
