--- a/6-guia/ejercicios-6/ej-12-6.tex
+++ b/6-guia/ejercicios-6/ej-12-6.tex
@@ -1,52 +1,54 @@
 \ejercicio
 \begin{enumerate}[label=\roman*)]
-	\item Sea $w \en G_{36}$, $w^4 \distinto 1.$ Calcular $\sumatoria{k=7}{60}w^{4k}$
+  \item Sea $w \en G_{36}$, $w^4 \distinto 1.$ Calcular $\sumatoria{k=7}{60}w^{4k}$
 
-	      \separadorCorto
-	      Sé que si $w \en G_{36} \entonces
-		      \llave{l}{
-			      w^{36} = 1 \\
-			      \sumatoria{k=0}{35} w^k = 0
-		      }$\\
-	      Como $w^4 \distinto 1$ sé que $w \distinto \pm1$. Si no tendría que considerar casos particulares para la suma.\\
+        \separadorCorto
+        Sé que si $w \en G_{36} \entonces
+          \llave{l}{
+            w^{36} = 1 \\
+            \sumatoria{k = 0}{35} w^k = 0
+          }$\\
+        Como $w^4 \distinto 1$ sé que $w \distinto \pm1$. Si no tendría que considerar casos particulares para la suma.\\
 
-	      Si
-	      $\sumatoria{k=7}{60}w^{4k} =
-		      \ub{\sumatoria{k=7}{60}w^{4k} + \magenta{\sumatoria{k=0}{6}w^{4k}}}{\sumatoria{k=0}{60}w^{4k}}
-		      - \magenta{\sumatoria{k=0}{6}w^{4k}} =
-		      \sumatoria{k=0}{60}w^{4k} - \sumatoria{k=0}{6}w^{4k} =
-		      \frac{(w^4)^{61} - 1}{w^4 - 1} - \frac{(w^4)^7 - 1}{w^4 - 1} =
-		      \frac{(w^4)^{61} - (w^4)^7 }{w^4 - 1}\\
-		      \flecha{$61 = 9\cdot6 + 7 $}[$w^36 = 1$]
-		      \frac{((\ob{ \scriptstyle w^{36}}{=1})^6  \cdot (w^4)^7 - (w^4)^7 }{w^4 - 1}
-		      \to$
-	      \boxed{\sumatoria{k=7}{60}w^{4k} =0}
+        Si
+        $\sumatoria{k = 7}{60}w^{4k} =
+          \ub{\sumatoria{k = 7}{60}w^{4k} + \magenta{\sumatoria{k = 0}{6}w^{4k}}}{\sumatoria{k=0}{60}w^{4k}}
+          - \magenta{\sumatoria{k = 0}{6}w^{4k}} =
+          \sumatoria{k = 0}{60}w^{4k} - \sumatoria{k=0}{6}w^{4k} =
+          \frac{(w^4)^{61} - 1}{w^4 - 1} - \frac{(w^4)^7 - 1}{w^4 - 1} =
+          \frac{(w^4)^{61} - (w^4)^7 }{w^4 - 1}\\
+          \flecha{$61 = 9\cdot6 + 7 $}[$w^36 = 1$]
+          \frac{(\ob{ \scriptstyle w^{36}}{=1})^6  \cdot (w^4)^7 - (w^4)^7 }{w^4 - 1}
+          \to$
+        \boxed{\sumatoria{k=7}{60} w^{4k} = 0}
 
-	\item Sea $w \en G_{11}$, $w \distinto 1.$ Calcular $\re\parentesis{\sumatoria{k=0}{60}w^k}$.
+  \item Sea $w \en G_{11}$,
+        $w \distinto 1$.
+        Calcular $\re\parentesis{\sumatoria{k=0}{60}w^k}$.
 
-	      \separadorCorto
-	      Sé que si $w \en G_{11} \entonces
-		      \llave{l}{
-			      w^{11} = 1 \\
-			      \sumatoria{k=0}{10} w^k = 0\\
-			      11 \text{ es impar} \entonces -1 \not\en G_{11}
-		      }$\\
-	      Como $w \distinto 1$ no calculo caso particular para la suma.
-	      Me piden la parte real $ \flecha{uso} \re(z) = \frac{z + \conj z}{2}$.\\
+        \separadorCorto
+        Sé que si $w \en G_{11} \entonces
+          \llave{l}{
+            w^{11} = 1 \\
+            \sumatoria{k=0}{10} w^k = 0\\
+            11 \text{ es impar} \entonces -1 \not \en G_{11}
+          }$\\
+        Como $w \distinto 1$ no calculo caso particular para la suma.
+        Me piden la parte real $ \flecha{uso} \re(z) = \frac{z + \conj z}{2}$.\\
 
-	      Probé hacer la suma de Gauss como en el anterior, pero no llegué a nada, abro sumatoria y uso que $61 = 5 \cdot 11 +6$, porque hay 61 sumandos.\\
+        Probé hacer la suma de Gauss como en el anterior, pero no llegué a nada, abro sumatoria y uso que $61 = 5 \cdot 11 +6$, porque hay 61 sumandos.\\
 
-	      $\sumatoria{k=0}{60}w^k =
-		      w^0 + \dots + w^{60} =
-		      5 \cdot \ub{\ob{(w^0 + w^1 + \dots + w^9 + w^{10})}{=0}}{\text{\tiny agrupé usando: }w \en G^{11} \entonces w^k = w^{r_{11}(k)}} +
-		      w^{55} + w^{56} + w^{57} + w^{58} + w^{59} + w^{60}=\\
-		      = w^0 + w^1 + w^2 + w^3 + w^4 + w^5 \llamada{1}
-	      $\\
+        $\sumatoria{k=0}{60}w^k =
+          w^0 + \dots + w^{60} =
+          5 \cdot \ub{\ob{(w^0 + w^1 + \dots + w^9 + w^{10})}{=0}}{\text{\tiny agrupé usando: }w \en G^{11} \entonces w^k = w^{r_{11}(k)}} +
+          w^{55} + w^{56} + w^{57} + w^{58} + w^{59} + w^{60}=\\
+          = w^0 + w^1 + w^2 + w^3 + w^4 + w^5 \llamada{1}
+        $\\
 
-	      También voy a usar que si $w \en G_{11} \entonces \conj w^k = w^{r_{11}(-k)}$\\
-          $\re{\sumatoria{k=0}{60}w^k} = \frac{\sumatoria{k=0}{60}w^k +\sumatoria{k=0}{60}\conj w^k}{2} \stackrel{\llamada1}=
-              \frac{w^0 + w^1 + w^2 + w^3 + w^4 + w^5 + \conj w^0 + \conj w^1 + \conj w^2 + \conj w^3 + \conj w^4 + \conj w^5}{2} =\\
-              = \frac{w^0}{2} + \frac{\ob{w^1 + w^2 + w^3 + w^4 + w^5 + w^0 + w^{10} + w^9 + w^8 + w^7 + w^6}{\sumatoria{k=0}{10} w^k}}{2} =
-              \frac{\ob{\scriptstyle w^0}{1}}{2} + \frac{\ob{\scriptstyle\sumatoria{k=0}{10} w^k}{= 0}}{2} = \frac{1}{2}
-	      $
+        También voy a usar que si $w \en G_{11} \entonces \conj w^k = w^{r_{11}(-k)}$\\
+        $\re{\sumatoria{k=0}{60}w^k} = \frac{\sumatoria{k=0}{60}w^k +\sumatoria{k=0}{60}\conj w^k}{2} \stackrel{\llamada1}=
+          \frac{w^0 + w^1 + w^2 + w^3 + w^4 + w^5 + \conj w^0 + \conj w^1 + \conj w^2 + \conj w^3 + \conj w^4 + \conj w^5}{2} =\\
+          = \frac{w^0}{2} + \frac{\ob{w^1 + w^2 + w^3 + w^4 + w^5 + w^0 + w^{10} + w^9 + w^8 + w^7 + w^6}{\sumatoria{k=0}{10} w^k}}{2} =
+          \frac{\ob{\scriptstyle w^0}{1}}{2} + \frac{\ob{\scriptstyle\sumatoria{k=0}{10} w^k}{= 0}}{2} = \frac{1}{2}
+        $
 \end{enumerate}
