--- a/3-guia/ejercicios-3/ej-14-3.tex
+++ b/3-guia/ejercicios-3/ej-14-3.tex
@@ -11,6 +11,6 @@ $\llave{c c c c c c c}{
 		\#5 & \#4 & \#3 & \#4 & \#3 & \#2 & \#1 \\
 		\downarrow & \downarrow & \downarrow &\downarrow &\downarrow &\downarrow &\downarrow\\
 		f(1) & f(2) &f(3) &f(4) &f(5) &f(6) &f(7)\\
-		\multicolumn{3}{c}{\blue{Condiciones pedidas}} & \multicolumn{4}{c}{\green{Lo que resta para completar}}
+        \multicolumn{3}{c}{\blue{\text{Condiciones pedidas}}} & \multicolumn{4}{c}{\green{\text{Lo que resta para completar}}}
 	}
 	\to \blue{5 \cdot 4 \cdot 3} \cdot \green{4 \cdot 3 \cdot 2 \cdot 1} = \frac{5!}{(5-3)!} \cdot 4!$
