--- a/3-guia/ejercicios-3/ej-28-3.tex
+++ b/3-guia/ejercicios-3/ej-28-3.tex
@@ -8,26 +8,14 @@ En este ejercicio no hace falta usar inducción.
 \end{enumerate}
 
 \separadorCorto
-
+\hacer
 Binomio de Newton: $(x + y)^n = \sumatoria{k=0}{n} \binom{n}{k} x^n y^{n-k}$
 \begin{enumerate}[label=\roman*)]
-	\item
+	\item 
 
-	\item  Binomio $\to
-		      \llaves{lcr}{
-			      x &=& 1\\
-			      y &=& -1
-		      } \to 0^n = \sumatoria{k=0}{n} \binom{n}{k} 1^n (-1)^{n-k}  = \sumatoria{k=0}{n} \binom{n}{k} (-1)^{n-k} = 0 \to\\
-		      \llave{l}{
-		      \flecha{si $n$ es par}[primer término positivo] \sumatoria{k=0}{n} (-1)^k  \binom{n}{k} =
-		      \binom{n}{0} - \binom{n}{1} + \dots + (-1)^\frac{n}{2} \binom{n}{\frac{n}{2}} +\dots  - \binom{n}{k-1} + \binom{n}{n} \to\\
-		      \flecha{uso sugerencia}[$\binom{n}{k} = \binom{n}{n-k}$ ]
-		      2\cdot\binom{n}{0} - 2 \cdot \binom{n}{1} + \dots + 2 \cdot (-1)^{\frac{n}{2} + 1} \binom{n}{\frac{n}{2} + 1} + (-1)^\frac{n}{2} \binom{n}{\frac{n}{2}} = 0 \red{¿Qué onda?}\\
+	\item  
 
-		      \flecha{si $n$ es impar}[primer término negativo] \sumatoria{k=0}{n} (-1)^{k+1} \binom{n}{k} =
-		      - \binom{n}{0} + \binom{n}{1} - \dots  - \binom{n}{k-1} + \binom{n}{n} \flecha{uso sugeerencia}[$\binom{n}{k} = \binom{n}{n-k}$ \checkmark] 0
-		      }$
-
-	\item \hacer
-	\item \hacer
+	\item 
+	\item 
 \end{enumerate}
+
