--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -12,6 +12,7 @@
 \def\irracionales{\mathbb I}
 \def\complejos{\mathbb C}
 
+
 \def\K{\mathbb K} % cuerpo K
 \def\i{\text{i}}
 \def\vacio{\varnothing}
@@ -45,6 +46,7 @@
 %funciones
 \DeclareMathOperator{\dom}{Dom}
 \DeclareMathOperator{\cod}{Cod}
+\def\F{\mathcal F}
 \def\comp{\circ}
 \def\inv{^{-1}}
 \def\infinito{\infty}
