--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -43,10 +43,10 @@
 \usepackage{hyperref} % para que haya links navegables en el PDF
 \hypersetup{
     colorlinks=true,
-    linkcolor=blue,
+    linkcolor=blue!80!black,
     filecolor=magenta,      
-    urlcolor=OliveGreen,
-    pdftitle={Álgebra I - Resuelta, sueltísima.},
+    urlcolor=OliveGreen!90!black,
+    pdftitle={Álgebra I - Resuelta, sueltísima},
     pdfauthor={Por los alumnos y exalumnos de Álgebra I}
     }
 \urlstyle{same}
