--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -119,7 +119,7 @@ o  mejor aún si querés subirlo en \LaTeX $\to$ \href{https://github.com/nad-ga
             cyan\or magenta\or OliveGreen\or YellowOrange\or Cerulean\or Violet\or Purple\or
           \fi
         }
-        {\text{\small\FiveStar}^{#1}}%
+        {\text{{\small\FiveStar}}^{#1}}%
       }%
     }
 }
