--- a/3-guia/ejercicios-3-extra/ej-extra-2-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-2-3.tex
@@ -1,4 +1,16 @@
 \ejExtra
 
 Sea
-$\F = \set{f:\set{1,2,3,4,5} \to \set{1,2,3,4,5,6,7,8,9}} 
+$\F = \set{ f:\set{1,2,3,4,5} \to \set{1,2,3,4,5,6,7,8,9} }$.
+
+\begin{enumerate}[label=\alph*)] 
+        \item 
+                Determinar cuántas funciones
+                $f \en \F$ satisfacen $\#\set{x \en \dom(f)\ / \ f(x) = 9} = 2 $
+
+        \item
+                Determinar cuántas funciones
+                $f \en \F$ satisfacen $\#\im(f) = 4$.
+ \end{enumerate}
+
+ 
