Add extra2-3 terminado.

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -1,4 +1,4 @@
-% Definiciones y nuevos comandos:
+% Definiciones y nuevos comandos:def
 % =============
 % Conjuntos
 \def\partes{\mathcal P}
@@ -137,6 +137,7 @@ o  mejor aún si querés subirlo en \LaTeX $\to$ \href{https://github.com/nad-ga
 \newcommand{\cyan}[1]{\textcolor{cyan}{#1}}
 \newcommand{\yellow}[1]{\textcolor{YellowOrange}{#1}}
 \newcommand{\magenta}[1]{\textcolor{magenta}{#1}}
+\newcommand{\purple}[1]{\textcolor{purple}{#1}}
 
 % Conjuntos entre llaves y paréntesis
 % te ahorrás escribir los \left y \right, así dejando el código más legible.
